Bug 476860 - Plasma 6: Half the FPS with atomic mode setting
Summary: Plasma 6: Half the FPS with atomic mode setting
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
: 477483 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-12 00:14 UTC by Peter Eszlari
Modified: 2024-03-03 01:02 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kwin info (6.62 KB, text/plain)
2023-11-12 00:14 UTC, Peter Eszlari
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Eszlari 2023-11-12 00:14:01 UTC
Created attachment 163063 [details]
kwin info

SUMMARY
When running Plasma 6 Wayland session on my old Intel Haswell system, I get half the FPS (30 instead of 60).

STEPS TO REPRODUCE
1. login in to a Plasma 6 Wayland session
2. enable "Show FPS" desktop effect

OBSERVED RESULT
The "Show FPS" desktop effect show a value of ~30fps, with jumps up to 50fps, when interacting with the desktop.

EXPECTED RESULT
Constant 60fps.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.2.0-36-generic (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-4690 CPU @ 3.50GHz
Memory: 22.4 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 4600

ADDITIONAL INFORMATION
This works in Plasma6/X11, Plasma5/Wayland and Plasma5/X11 on the same computer.
Under Plasma6/Wayland I get a constant 60fps when disabling atomic mode setting using KWIN_DRM_NO_AMS=1.
Comment 1 Bug Janitor Service 2023-11-13 13:46:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4632
Comment 2 Zamundaaa 2023-11-13 14:41:15 UTC
Git commit 869e86ff0014e020c4076a8f22e78f69cab1063a by Xaver Hugl.
Committed on 13/11/2023 at 15:33.
Pushed by zamundaaa into branch 'master'.

backends/drm: disable buffer readability checks on Intel

They cause stutters and reduced frame rates on some Intel laptops because the
buffers don't become readable in time, so disable the checks until that's fixed
on the driver side. For debugging purposes, the environment variable
KWIN_DRM_DISABLE_BUFFER_READABILITY_CHECKS can be used to override the default
behavior.

M  +8    -0    src/backends/drm/drm_buffer.cpp
M  +6    -0    src/backends/drm/drm_gpu.cpp
M  +2    -0    src/backends/drm/drm_gpu.h

https://invent.kde.org/plasma/kwin/-/commit/869e86ff0014e020c4076a8f22e78f69cab1063a
Comment 3 Zamundaaa 2023-11-25 17:17:12 UTC
*** Bug 477483 has been marked as a duplicate of this bug. ***
Comment 4 Mintra 2024-03-01 10:19:19 UTC
I don't have this bug in plasma 5.27.10 on Fedora KDE. But the bug is persistent on Plasma 6. I have tested on Neon & Fedora Rawhide. My cpu is i5-9500 (uhd 630).