src/backends/drm/drm_buffer.cpp
@@ -26,11 +26,19 @@
 namespace KWin
 {
 
+static bool s_envIsSet = false;
+static bool s_disableBufferWait = qEnvironmentVariableIntValue("KWIN_DRM_DISABLE_BUFFER_READABILITY_CHECKS", &s_envIsSet) && s_envIsSet;
+
 DrmFramebuffer::DrmFramebuffer(DrmGpu *gpu, uint32_t fbId, GraphicsBuffer *buffer)
     : m_framebufferId(fbId)
     , m_gpu(gpu)
     , m_bufferRef(buffer)
 {
+    if (s_disableBufferWait || (m_gpu->isI915() && !s_envIsSet)) {
+        // buffer readability checks cause frames to be wrongly delayed on some Intel laptops
+        // See https://gitlab.freedesktop.org/drm/intel/-/issues/9415
+        m_readable = true;
+    }
 }
 
 DrmFramebuffer::~DrmFramebuffer()
