src/backends/drm/drm_gpu.cpp
@@ -75,6 +75,7 @@ DrmGpu::DrmGpu(DrmBackend *backend, const QString &devNode, int fd, dev_t device
     // find out what driver this kms device is using
     DrmUniquePtr<drmVersion> version(drmGetVersion(fd));
     m_isNVidia = strstr(version->name, "nvidia-drm");
+    m_isI915 = strstr(version->name, "i915");
     m_isVirtualMachine = strstr(version->name, "virtio") || strstr(version->name, "qxl")
         || strstr(version->name, "vmwgfx") || strstr(version->name, "vboxvideo");
 
@@ -688,6 +689,11 @@ bool DrmGpu::asyncPageflipSupported() const
 bool DrmGpu::isNVidia() const
 {
     return m_isNVidia;
+}
+
+bool DrmGpu::isI915() const
+{
+    return m_isI915;
 }
 
 bool DrmGpu::isRemoved() const
